Update pterofiltrus to new template. Fix grid image stretching.

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -133,8 +133,9 @@ hr {
 
 img.in {
   // TODO: Find some way to actually use $grid-gutter-width
-  width: calc(100% - 16px);
-  height: calc(100% - 16px);
+  max-width: calc(100% - 16px);
+  max-height: calc(100% - 16px);
+  margin: auto;
 }
 
 .in {
